<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:onClick="closekeyboard">
        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rando"
                />

            <EditText
                android:id="@+id/RandoNameEditText"
                android:layout_width="169dp"
                android:layout_height="wrap_content"
                android:text="@string/empty"

                />

            <Button
                android:id="@+id/Parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="click_on_parking"
                android:text="@string/parking"
                />

            <Button
                android:id="@+id/d_parcours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="click_on_dparcours"
                android:text="@string/d_but_parcours"
                />

            <Button
                android:id="@+id/pt_vue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="click_on_pointdevue"
                android:text="@string/point_de_vue"
                />

            <Button
                android:id="@+id/balise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/balise_intersection"
                />

            <Button
                android:id="@+id/f_parcours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:onClick="click_on_fparcours"
                android:text="@string/fin_de_parcours"
                />

            <Button
                android:id="@+id/save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>